--- a/css/style.css
+++ b/css/style.css
@@ -509,4 +509,20 @@ body {
   transform: matrix();
 }
 
+/* .logo-9 {
+  width: 7rem;
+  height: 5rem;
+  filter: gray;
+  -webkit-filter: grayscale(1);
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: calc();
+}
+
+.logo-9:hover {
+  filter: none;
+  -webkit-filter: grayscale(0);
+  -webkit-transform: scale(1.01);
+  transform: matrix();
+} */
+
 /******************** Our Customer Section Ends **********************/
